--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,2 +1,42 @@
 set -g default-terminal "tmux-256color"
 set -ag terminal-overrides ",xterm-256color:RGB"
+
+set -g base-index 1
+set -sg escape-time 0
+set -g mouse on
+set -g status-position top
+
+set -g prefix C-a
+
+unbind r 
+bind r source-file ~/.config/tmux/tmux.conf
+
+bind-key h select-pane -L
+bind-key j select-pane -D
+bind-key k select-pane -U
+bind-key l select-pane -R
+
+#TPM
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'catppuccin/tmux#v1.0.2'
+
+# catppuccin
+set -g @catppuccin_window_status_style "none"
+set -g @catppuccin_status_left_separator "█"
+set -g @catppuccin_status_right_separator "█"
+
+set -g @catppuccin_date_time_text "%Y-%m-%d %H:%M:%S"
+
+set -gF window-status-style "bg=#{@thm_surface_1},fg=#{@thm_fg}"
+set -gF window-status-current-style "bg=#{@thm_peach},fg=#{@thm_crust}"
+
+set -g window-status-format " #W | #I "
+set -g window-status-current-format " #W | #I "
+
+
+set -g status-left ""
+set -g  status-right "#{E:@catppuccin_status_application}"
+set -ag status-right "#{E:@catppuccin_status_session}"
+
+run '~/.config/tmux/plugins/tpm/tpm'
+
