configurando tmuxifier e symlink de .zshrc

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -19,6 +19,7 @@ bind-key l select-pane -R
 #TPM
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'catppuccin/tmux#v1.0.2'
+set -g @plugin 'jimeh/tmuxifier'
 
 # catppuccin
 set -g @catppuccin_window_status_style "none"
